@@ -1,7 +1,7 @@
 #  File src/library/base/R/temp.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2017 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,7 +16,8 @@
 #  A copy of the GNU General Public License is available at
 #  https://www.R-project.org/Licenses/
 
+# ../man/tempfile.Rd
 tempfile <- function(pattern = "file", tmpdir = tempdir(), fileext = "")
     .Internal(tempfile(pattern, tmpdir, fileext))
 
-tempdir <- function() .Internal(tempdir())
+tempdir <- function(check = FALSE) .Internal(tempdir(check))
